simple-curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    app: curl
    version: v1
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.83.1
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
      resources:
        requests:
          cpu: "100m"
        limits:
          cpu: "200m"
